Google 로그인 및 세션 어노테이션 추가

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,5 @@
 .gradle
 build
 gradle
-src/main/resources/static/
-src/main/resources/templates/
+
+src/main/resources/application-oauth.properties
