--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 # application-oauth.properties 를 추가
 spring.profiles.include=oauth
+spring.session.store-type=jdbc
